src/css-modules/header.css
/* mobile first styles */

header {
  --page-padding: var(--page-padding-mobile);
  --page-delta-padding: var(--page-delta-padding-mobile);
  --h1-padding: var(--h1-padding-mobile);

  --footer-bg-poligon: var(--footer-bg-poligon-mobile);

  --full-padding: calc(var(--page-padding) + var(--page-delta-padding));

  display: grid;
  grid-template-columns: var(--page-delta-padding) 1fr var(--page-delta-padding);
  grid-template-rows:
    var(--page-delta-padding) minmax(0, 1fr)
    var(--full-padding) max-content;

  height: 100vh;
  height: 100dvh;
  padding: var(--page-padding);

  position: relative;
}

header::before {
  content: "";
  position: absolute;
  width: 100%;
  height: 100%;

  clip-path: var(--footer-bg-poligon);
  background: var(--header-linear-gradient);
}

header h1 {
  grid-row: 2;
  grid-column: 2;
  z-index: 3;

  align-self: end;
  justify-self: start;
  font-size: var(--h1-fontsize);
  font-family: var(--h1-font);
  color: var(--col-txt-alt);
  text-shadow: var(--txt-shadow);
  padding: var(--h1-padding);
  font-weight: bold;
  line-height: 0.9;
  text-align: center;
  margin: 0 auto;
}

header img {
  grid-row: 2;
  grid-column: 2;
  z-index: 2;

  width: 100%;
  height: 100%;
  object-fit: cover;
  box-shadow: var(--box-shadow-darker);
}

header .about-me {
  grid-row: 4;
  grid-column: 1 / span 3;
  z-index: 1;
}

/* mobile, horizontal */
@media only screen and (max-height: 550px) and (orientation: landscape) {
  header {
    --page-delta-padding: 0;
    --footer-bg-poligon: var(--footer-bg-poligon-mobile-landscape);

    grid-template-columns: 0.8fr 1fr;
    grid-template-rows: minmax(0, 1fr);
  }

  header h1 {
    grid-row: 1;
    grid-column: 1;
  }

  header img {
    grid-row: 1;
    grid-column: 1;
  }

  header .about-me {
    grid-row: 1;
    grid-column: 2;
  }
}

/* tablet or larger */
@media only screen and (min-width: 767px) and (min-height: 551px) {
  header {
    --page-padding: var(--page-padding-tablet);
    --page-delta-padding: var(--page-delta-padding-tablet);
    --h1-padding: var(--h1-padding-tablet);

    --footer-bg-poligon: var(--footer-bg-poligon-tablet);

    --h1-height: calc(
      var(--h1-padding-top-tablet) + var(--h1-padding-bottom-tablet) +
        var(--txt-lineheight) * var(--h1-fontsize)
    );

    --portrait-inner-width: calc(50% - 2 * var(--page-delta-padding));

    --portrait-float-space-height: calc(
      var(--txt-lineheight) * (var(--h2-fontsize) + 4 * var(--txt-fontsize)) +
        var(--about-me-description-padding-top-tablet) +
        var(--about-me-padding-top-tablet)
    );

    grid-template-columns:
      var(--page-delta-padding) var(--portrait-inner-width)
      var(--page-delta-padding) 1fr var(--page-delta-padding);

    grid-template-rows:
      minmax(0, 1fr) var(--h1-height)
      var(--portrait-float-space-height)
      min-content minmax(0, 1fr);
  }

  header h1 {
    grid-row: 2;
    grid-column: 1 / span 5;
    justify-self: end;
    margin: 0;
  }

  header img {
    grid-row: 2 / span 2;
    grid-column: 1 / span 3;
  }

  header .about-me {
    grid-row: 3 / span 2;
    grid-column: 2 / span 3;
  }

  header .about-me {
    background-color: var(--bg-col);
  }
}

/* desktop or larger */
@media only screen and (min-width: 961px) and (orientation: landscape) and (min-height: 551px) {
  header {
    --page-padding: var(--page-padding-desktop);
    --page-delta-padding: var(--page-delta-padding-desktop);
    --h1-padding: var(--h1-padding-desktop);

    --footer-bg-poligon: var(--footer-bg-poligon-desktop);

    grid-template-columns:
      0.8fr var(--page-delta-padding-desktop)
      1fr;

    grid-template-rows: var(--page-delta-padding-desktop) minmax(0, 1fr) var(
        --page-delta-padding-desktop
      );
  }

  header h1 {
    grid-row: 1 / span 3;
    grid-column: 1 / span 2;
    justify-self: end;
    margin: 0 auto;
  }

  header img {
    grid-row: 1 / span 3;
    grid-column: 1 / span 2;
  }

  header .about-me {
    grid-row: 2;
    grid-column: 2 / span 2;
  }
}

